--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <title>Task 11</title>
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+    <section class="search-section">
+      <form id="search-form">
+        <input
+          class="form-control"
+          id="search-input"
+          type="text"
+          placeholder="Введіть ключове слово для пошуку"
+        />
+        <button class="btn" type="submit">Пошук</button>
+      </form>
     </section>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <ul id="gallery" class="gallery"></ul>
+    <div id="loader" class="hidden loader"></div>
 
-    <script type="module" src="./main.js"></script>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
