--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Task 11</title>
+    <title>Task 12</title>
   </head>
   <body>
     <section class="search-section">
@@ -20,6 +20,8 @@
 
     <ul id="gallery" class="gallery"></ul>
     <div id="loader" class="hidden loader"></div>
+    <button id="load-more-btn" class="hidden more">Завантажити ще</button>
+    <div id="loader" class="hidden">Loading...</div>
 
     <script src="./main.js" type="module"></script>
   </body>
